# smail

./: .gitignore  Cargo.toml  Makefile  README.md
src/: config.rs  db.rs  lib.rs  server.rs  state_machine.rs  utils.rs  web.rs
static/: inbox.html  inbox.js  index.html
